[package]
name = "rust-visual-blockchain"
description = "A basic blockchain built with a visual component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = {version = "0.1.1", features=["alloc"]}
chrono = {version ="0.4.11"}
dioxus = {version ="0.2.3", features = ["desktop"]}
sha2 = "0.10.2"